fix: spacing

--- a/static/css/_landing-binary.scss
+++ b/static/css/_landing-binary.scss
@@ -61,6 +61,7 @@ $header-color : #333333;
   padding: 0 2rem;
   margin: 0 auto;
   max-width: 1400px;
+
 }
 
 .binary-hero {
@@ -352,6 +353,10 @@ $header-color : #333333;
 
 .binary-choose-wrapper {
 
+  @media (max-width: 800px) {
+    padding-top: 40px;
+  }
+
   &-inner {
     padding: 3rem 0;
 
@@ -552,6 +557,11 @@ $header-color : #333333;
         font: 700 3rem $font-IBM;
         color: $header-color;
         margin-bottom: 0.5rem;
+
+        @media (max-width: 400px) {
+          font-size: 2rem;
+        }
+
       }
 
       h2 {
@@ -745,6 +755,11 @@ $header-color : #333333;
   padding: 2rem 0rem 3rem 0rem;
   margin: 0 auto;
   max-width: 1400px;
+
+  @media (max-width: 700px) {
+    padding: 2rem 0rem 0rem 0rem;
+
+  }
 }
 
 .card-wrapper {
